--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "/test/"
+      "/test/",
+      "/index.ts"
     ],
     "coverageThreshold": {
       "global": {
@@ -123,5 +124,7 @@
     "doc": "docs",
     "test": "test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.1.3"
+  }
 }
