--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^7.1.2",
+    "@types/core-js": "^2.5.0",
     "@types/jest": "^24.0.3",
     "@types/jest-diff": "^20.0.0",
     "@types/node": "^12.0.4",
