--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "test": "test"
   },
   "dependencies": {
-    "core-js": "^3.1.3"
+    "core-js": "^3.1.3",
+    "ts-custom-error": "^3.1.0"
   }
 }
