--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
   },
   "dependencies": {
     "core-js": "^3.1.3",
+    "crypto-browserify": "^3.12.0",
     "ts-custom-error": "^3.1.0"
   }
 }
