--- a/package.json
+++ b/package.json
@@ -131,6 +131,8 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/big.js": "^4.0.5",
+    "big.js": "^5.2.2",
     "core-js": "^3.1.3",
     "crypto-browserify": "^3.12.0",
     "ts-custom-error": "^3.1.1"
