--- a/package.json
+++ b/package.json
@@ -131,10 +131,10 @@
     "test": "test"
   },
   "dependencies": {
-    "@types/big.js": "^4.0.5",
-    "big.js": "^5.2.2",
+    "@types/mathjs": "^6.0.1",
     "core-js": "^3.1.3",
     "crypto-browserify": "^3.12.0",
+    "mathjs": "^6.0.4",
     "ts-custom-error": "^3.1.1"
   }
 }
