--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
   "dependencies": {
     "core-js": "^3.1.3",
     "crypto-browserify": "^3.12.0",
+    "lodash": "^4.17.15",
     "mathjs": "^6.0.4",
     "ts-custom-error": "^3.1.1"
   }
