--- a/package.json
+++ b/package.json
@@ -89,10 +89,8 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^7.1.2",
-    "@types/core-js": "^2.5.0",
     "@types/jest": "^24.0.3",
     "@types/jest-diff": "^20.0.0",
-    "@types/mathjs": "^6.0.1",
     "@types/node": "^12.0.4",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
@@ -132,6 +130,9 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/core-js": "^2.5.2",
+    "@types/lodash": "^4.14.136",
+    "@types/mathjs": "^6.0.1",
     "core-js": "^3.1.3",
     "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
