--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@channel/channel": "^1.0.0",
     "@types/core-js": "^2.5.2",
     "@types/lodash": "^4.14.136",
     "@types/mathjs": "^6.0.1",
