--- a/package.json
+++ b/package.json
@@ -140,5 +140,8 @@
     "mathjs": "^6.0.4",
     "ts-custom-error": "^3.1.1",
     "ts-deferred": "^1.0.4"
+  },
+  "peerDependencies": {
+    "type-graphql": "^0.17.4"
   }
 }
