--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.14.2",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "type-graphql": "^0.17.4"
   },
   "husky": {
     "hooks": {
