--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
+    "graphql": "^14.4.2",
     "husky": "^2.0.0",
     "jest": "^24.0.0",
     "jest-config": "^24.0.0",
@@ -113,9 +114,9 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
+    "type-graphql": "^0.17.4",
     "typedoc": "^0.14.2",
-    "typescript": "^3.3.3333",
-    "type-graphql": "^0.17.4"
+    "typescript": "^3.3.3333"
   },
   "husky": {
     "hooks": {
