--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^7.1.2",
+    "@types/graphql": "^14.2.3",
     "@types/jest": "^24.0.3",
     "@types/jest-diff": "^20.0.0",
     "@types/node": "^12.0.4",
@@ -115,7 +116,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
     "type-graphql": "^0.17.4",
-    "typedoc": "^0.14.2",
+    "typedoc": "^0.15.0",
     "typescript": "^3.3.3333"
   },
   "husky": {
@@ -136,7 +137,7 @@
     "@types/core-js": "^2.5.2",
     "@types/lodash": "^4.14.136",
     "@types/mathjs": "^6.0.1",
-    "core-js": "^3.1.3",
+    "core-js": "^3.2.0",
     "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
     "mathjs": "^6.0.4",
