--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && typedoc --out docs --target es6 --theme minimal --mode file src",
     "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
+    "test:watch": "jest --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
@@ -137,6 +137,7 @@
     "@types/lodash": "^4.14.136",
     "@types/mathjs": "^6.0.1",
     "crypto-browserify": "^3.12.0",
+    "decko": "^1.2.0",
     "lodash": "^4.17.15",
     "mathjs": "^6.0.4",
     "ts-custom-error": "^3.1.1",
