--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "@types/mathjs": "^6.0.1",
     "crypto-browserify": "^3.12.0",
     "decko": "^1.2.0",
+    "iterall": "^1.2.2",
     "lodash": "^4.17.15",
     "mathjs": "^6.0.4",
     "ts-custom-error": "^3.1.1",
