--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
   "dependencies": {
     "@types/lodash": "^4.14.136",
     "@types/mathjs": "^6.0.1",
+    "@types/react": "^16.9.2",
+    "@types/styled-components": "^4.1.18",
     "crypto-browserify": "^3.12.0",
     "decko": "^1.2.0",
     "iterall": "^1.2.2",
@@ -144,6 +146,8 @@
     "ts-deferred": "^1.0.4"
   },
   "peerDependencies": {
+    "react": "^16.9.0",
+    "styled-components": "^4.3.2",
     "type-graphql": "^0.17.4"
   }
 }
