feat: some react hooks

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
       "/test/",
       "/test-utils/",
       "isomorphic",
-      "index.ts"
+      "index.ts",
+      "frontend-stuff"
     ],
     "coverageThreshold": {
       "global": {
