--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "@types/lodash": "^4.14.136",
     "@types/mathjs": "^6.0.1",
     "@types/react": "^16.9.2",
-    "@types/styled-components": "^4.1.18",
+    "@types/styled-components": "4.1.8",
     "crypto-browserify": "^3.12.0",
     "decko": "^1.2.0",
     "iterall": "^1.2.2",
