--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017", "dom", "esnext.asynciterable"],
     "jsx": "react",
     "strict": true,
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib"
   },
