--- a/package.json
+++ b/package.json
@@ -133,9 +133,17 @@
     "test": "test"
   },
   "dependencies": {
+    "@types/json-stringify-safe": "^5.0.0",
     "@types/mathjs": "^6.0.1",
+    "@types/uuid": "^3.4.6",
+    "chalk": "^3.0.0",
     "crypto-browserify": "^3.12.0",
+    "json-stringify-safe": "^5.0.1",
     "mathjs": "^6.2.3",
-    "ts-custom-error": "^3.1.1"
+    "pretty-error": "^2.1.1",
+    "rotating-file-stream": "^2.0.0",
+    "ts-custom-error": "^3.1.1",
+    "typescript-memoize": "^1.0.0-alpha.3",
+    "uuid": "^3.3.3"
   }
 }
