--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "jest": "^24.0.0",
     "jest-config": "^24.0.0",
     "lint-staged": "^8.0.0",
-    "prettier": "^1.14.3",
+    "prettier": "prettier/prettier#master",
     "prompt": "^1.0.0",
     "replace-in-file": "^4.0.0",
     "rimraf": "^2.6.2",
@@ -118,7 +118,7 @@
     "tslint-config-standard": "^8.0.1",
     "type-graphql": "^0.17.4",
     "typedoc": "^0.15.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.7.3"
   },
   "husky": {
     "hooks": {
