--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
     "type-graphql": "^0.17.4",
+    "typedi": "^0.8.0",
     "typedoc": "^0.15.3",
     "typescript": "^3.7.3"
   },
@@ -137,6 +138,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/mathjs": "^6.0.1",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/uuid": "^3.4.6",
     "chalk": "^3.0.0",
     "crypto-browserify": "^3.12.0",
@@ -145,6 +147,7 @@
     "json-stringify-safe": "^5.0.1",
     "mathjs": "^6.2.3",
     "pretty-error": "^2.1.1",
+    "reflect-metadata": "^0.1.13",
     "ts-custom-error": "^3.1.1",
     "typescript-memoize": "^1.0.0-alpha.3",
     "uuid": "^3.3.3"
