--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "version": "0.0.0-development",
   "description": "",
   "keywords": [],
@@ -135,7 +136,6 @@
     "test": "test"
   },
   "dependencies": {
-    "@types/fs-extra": "^8.0.1",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/mathjs": "^6.0.1",
     "@types/reflect-metadata": "^0.1.0",
@@ -143,7 +143,6 @@
     "chalk": "^3.0.0",
     "crypto-browserify": "^3.12.0",
     "find-remove": "^2.0.0",
-    "fs-extra": "^8.1.0",
     "json-stringify-safe": "^5.0.1",
     "mathjs": "^6.2.3",
     "pretty-error": "^2.1.1",
