--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,19 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "es6",
-    "module": "es6",
-    "lib": ["es2015", "es2016", "es2017", "dom", "esnext.asynciterable"],
-    "jsx": "react",
+    "target": "es5",
+    "module": "es2015",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": true,
     "sourceMap": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
+    "stripInternal": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": true,
-    "stripInternal": true,
-    "declarationDir": "dist",
-    "outDir": "dist"
+    "declarationDir": "dist/types",
+    "outDir": "dist/lib",
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
 }
