--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@elderapo/utils",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0-development",
   "description": "",
   "keywords": [],
@@ -15,6 +18,10 @@
     "type": "git",
     "url": "git+https://github.com/elderapo/utils.git"
   },
+  "bugs": {
+    "url": "https://github.com/elderapo/utils/issues"
+  },
+  "homepage": "https://github.com/elderapo/utils#readme",
   "license": "MIT",
   "engines": {
     "node": ">=6.0.0"
@@ -83,10 +90,10 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.1.2",
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^7.1.2",
     "@types/jest": "^24.0.3",
-    "@types/node": "^10.11.0",
+    "@types/node": "^13.5.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
