--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "version": "0.0.0-development",
   "description": "",
   "keywords": [],
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es5.js",
+  "main": "dist/main/index.js",
+  "module": "dist/module/index.js",
   "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
@@ -29,7 +29,9 @@
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts",
+    "build": "yarn build:main && yarn build:module",
+    "build:main": "tsc --module commonjs --outDir ./dist/main",
+    "build:module": "tsc --module esnext --outDir ./dist/module",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
@@ -103,18 +105,10 @@
     "jest": "^24.0.0",
     "jest-config": "^24.0.0",
     "lint-staged": "^8.0.0",
-    "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.25.3",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
