--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@types/uuid": "^3.4.6",
     "chalk": "^3.0.0",
     "crypto-browserify": "^3.12.0",
+    "emittery": "^0.5.1",
     "find-remove": "^2.0.0",
     "json-stringify-safe": "^5.0.1",
     "mathjs": "^6.2.3",
